Notes on algorithms to generate floored legs

--- a/latex/generation_algorithm.tex
+++ b/latex/generation_algorithm.tex
@@ -18,8 +18,7 @@ Von der Startposition aus, werden die Winkel an den Gelenken in jedem Schritt je
 
 Je nach Ausgangsposition sieht das Ergebnis aber nicht unbedingt natürlich aus. Zum Beispiel kann es passieren, dass das Fußgelenk nicht gedreht wird, also der Fuß das Schienbein einfach verlängert und die Spitze des Fußes Bodenkontakt hat. Wenn dann die Oberseite des Fußes näher am Boden ist als die Unterseite, dann ist das keine sinnvolle Position.
 Um so etwas zu verhindern, wird die Startposition der Extremität so gewählt, dass alle Gelenke stark angewinkelt sind. \todo{Abbildung}
-So wird nicht garantiert, dass Positionen, wie oben beschrieben, nicht auftreten können, aber in den meisten Fällen treten sie nicht auf.
+Außerdem wird während der Iteration verboten, dass Knochen unterhalb der Bodenhöhe enden.
 
 In jedem Schritt werden die Winkel um eine bestimmte Gradzahl verändert. Diese Gradzahl verkleinert sich mit jedem Schritt bis zu einer Minimalgröße. Zu Beginn werden die Winkel stark verändert um die grobe Ausrichtung des Beines festzulegen und in den kleiner werdenen Schritten wird die Extremität genauer ausgerichtet, so dass der Endpunkt zum Schluss auf dem Boden steht.
-Zusätzlich wird nicht in jedem Schritt jeder Freiheitsgrad jedes Gelenks verändert. Für jeden Freiheitsgrad wird eine Wahrscheinlichkeit (kleiner als eins) festgelegt, dass dieser ausgewählt wird. Dadruch können bestimmte Richtungen oder Gelenke priorisiert werden um ein besseres Ergebnis zu erzielen. \todo{Was sind die guten Einstellungen?}
-Außerdem gibt es eine gewisse Fehlerwahrscheinlichkeit, die ein Gelenk in die entgegengesetzte Richtung dreht, als die, die eigentlich "`richtig"' wäre. Dadurch soll verhindert werden, dass in bestimmten Situationen immer die gleichen "`Fehler"' gemacht werden. \todo{bringt das was?}
+Zusätzlich wird nicht in jedem Schritt jeder Freiheitsgrad jedes Gelenks verändert. Für jeden Freiheitsgrad wird eine Wahrscheinlichkeit (kleiner als eins) festgelegt, dass dieser ausgewählt wird. Dadruch können bestimmte Richtungen oder Gelenke priorisiert werden um ein besseres Ergebnis zu erzielen. \todo{Was sind die guten Einstellungen? bzw braucht man dise Wkten überhaupt?}
