Notes on mythical creatures with more than 4 extremities

--- a/latex/previous_work.tex
+++ b/latex/previous_work.tex
@@ -45,6 +45,31 @@
  \item Zunächst Generierung von äußerem 3D-Modell, dann Anpassung der Knochen.
 \end{itemize}
 
+%---------------------
+\section{Avatar movie}
+
+\begin{itemize}
+ \item Direhorse (Schreckenspferd) hat sechs Beine (vier vorne, zwei hinten).\\
+ Bilder: \url{https://james-camerons-avatar.fandom.com/wiki/Gallery:_Pandoran_Creatures?file=Muscle.jpg}, \url{https://james-camerons-avatar.fandom.com/wiki/Gallery:_Pandoran_Creatures?file=Pandora_ROVR_Direhorse.png}
+ \item Prolemuris hat Arme, mit einem Oberarm, aber zwei Unterarmen.\\
+ Bild: \url{https://james-camerons-avatar.fandom.com/wiki/Gallery:_Pandoran_Creatures}
+\end{itemize}
+
+
+%-------------------
+\section{Mythologie}
+
+\begin{itemize}
+ \item Zentauren haben Körper wie ein Pferd, aber statt einem Hals setzt ein menschlicher Oberkörper auf Schultergürtel auf.\\
+ \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/OurCentaursAreDifferent?from=Main.CentauroidForm}
+ \item Pegasus hat den Körper eines Pferdes + Flügel, die zusätzlich zu den Vorderbeinen an Schultergürtel ansetzen\\
+ \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus}
+\end{itemize}
+
+
+
+
+
 %-----------------
 %-----------------
 \chapter{Biologie}
