Model scapula only as clavicle is mostly not (or only partly) there

--- a/latex/previous_work.tex
+++ b/latex/previous_work.tex
@@ -82,4 +82,7 @@
  \item "`Säugetiere haben in der Regel sieben Halswirbel."' Es kann aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel})
  
  \item Form der Wirbelsäule siehe \url{https://de.wikipedia.org/wiki/Wirbels\%C3\%A4ule}
+ 
+ \item Schultergürtel: Das Schlüsselbein ist bei den meisten Wirbeltieren zurückgebildet, bei manchen gar nicht vorhanden. Das Rabenbein ist bei vielen Wirbeltieren zu einem Fortsatz am Schulterblatt zurückgebildet. Das Schulterblatt ist meistens vorhanden. $\rightarrow$ Nur das Schulterblatt wird modelliert.\\
+ \url{https://de.wikipedia.org/wiki/Schulterg\%C3\%BCrtel}
 \end{itemize}
