Replace vertebra numbers by more realistic counts and scale them to maximum length

--- a/latex/previous_work.tex
+++ b/latex/previous_work.tex
@@ -79,7 +79,14 @@
  \item "`Dem Skelett der Wirbeltiere sind viele Gemeinsamkeiten ansehbar, trotzdem unterscheidet es sich, je nach Lebensraum und Anforderungen, teilweise erheblich. Mit diesen Gemeinsamkeiten und Unterschieden beschäftigt sich die Vergleichende Anatomie."' (\url{https://de.wikipedia.org/wiki/Skelett#Wirbeltiere}) Notizen zu \cite{Vergleichende_Anatomie} siehe Anhang \ref{appendix_vergleichende_anatomie}.
  \item Das Skelett eines Wirbeltiers ist nicht unbedingt zusammenhängend.
  
- \item "`Säugetiere haben in der Regel sieben Halswirbel."' Es kann aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel})
+ \item "`Säugetiere haben in der Regel sieben Halswirbel."' Bei Wirbeltieren kann die Anzahl aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel}, weitere Quelle zu Wirbelanzahl bei Säugetieren: \url{https://archive.org/details/bub_gb_4JFmAAAAMAAJ/page/n35/mode/2up}, S.10)
+    \begin{itemize}
+     \item Halswirbel: 7 oder, falls Flügel 10 bis 30
+     \item Wirbel auf vorderer Hälfte der Wirbelsäule: 15 (Brustwirbel)
+     \item Wirbel auf hinterer Hälfte der Wirbelsäule: 10 (Lenden- + Kreuzwirbel)
+     \item Schwanzwirbel: 5 bis 20
+    \end{itemize}
+
  
  \item Form der Wirbelsäule siehe \url{https://de.wikipedia.org/wiki/Wirbels\%C3\%A4ule}
  
