--- a/latex/previous_work.tex
+++ b/latex/previous_work.tex
@@ -82,10 +82,12 @@
  \item "`Säugetiere haben in der Regel sieben Halswirbel."' Bei Wirbeltieren kann die Anzahl aber zwischen $6$ und $31$ variieren. Vögel haben zwischen $10$ und $31$ und zwei Tiere haben $6$ Wirbel. (\url{https://de.wikipedia.org/wiki/Halswirbel}, weitere Quelle zu Wirbelanzahl bei Säugetieren: \url{https://archive.org/details/bub_gb_4JFmAAAAMAAJ/page/n35/mode/2up}, S.10)
     \begin{itemize}
      \item Halswirbel: 7 oder, falls Flügel 10 bis 30
-     \item Wirbel auf vorderer Hälfte der Wirbelsäule: 15 (Brustwirbel)
-     \item Wirbel auf hinterer Hälfte der Wirbelsäule: 10 (Lenden- + Kreuzwirbel)
+     \item Brustwirbel: 15
+     \item Lenden- + Kreuzwirbel: 10
      \item Schwanzwirbel: 5 bis 20
     \end{itemize}
+ Auf der Rückenwirbelsäule liegen also insgesamt 25 Wirbel.   
+ Da der "`Wurzelwirbel"' in der Mitte der Rückenwirbelsäule liegt (oder zumindest ungefähr, da Bezierkurve ausgewertet bei 0,5) werden 13 vorne und 12 hinten generiert.
 
  
  \item Form der Wirbelsäule siehe \url{https://de.wikipedia.org/wiki/Wirbels\%C3\%A4ule}
