Describe save and load of skeletons and add some todos

--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -251,7 +251,7 @@
  
  Dazu kann man, statt die ursprünglichen Daten und deren Verteilung zu verwenden, die bedingten Verteilungen bilden. Dazu muss der bedingte Mittelwert und die bedingte Kovarianzmatrix bestimmt werden.
  
- \todo{Berechnung beschreiben: \url{https://en.wikipedia.org/wiki/Multivariate_normal_distribution#Conditional_distributions}}
+ \todo{Berechnung beschreiben: \url{https://en.wikipedia.org/wiki/Multivariate_normal_distribution\#Conditional_distributions}}
  Verwendet man nun die bedingte Kovarianzmatrix als Eingabe für die PCA, so erhält man nur noch Daten für Skelette mit den vorher festgelegten Bedingungen. Zu beachten ist hier, dass die Eigenvektoren sich im Vergleich zur PCA ohne Bedingungen verändern. Falls man diese also zur Bestimmung eines Datenpunktes verwendet hat (\zb in einer Benutzeroberfläche), so müssen die Werte für die neuen Eigenvektoren ganz neu ausgerechnet werden. \todo{ist das relevant für mein Benutzerinterface?}
  
  % feste Werte variieren
